  as argument, so you can use this, typed as `org.spockframework.runtime.extension.builtin.PreconditionContext` to
  enable IDE support like code completion:
+
[source,groovy]
----
@IgnoreIf({ PreconditionContext it -> it.os.windows })
def "I'll run everywhere but on Windows"() { ... }
----

- Upgrade JUnit 4 to 4.13 (in `spock-junit4`)

- Upgrade Hamcrest to 2.2 (from 1.3 provided previously by `junit4.jar`)

== 2.0-M2 (2020-02-10)

=== Groovy-3.0 Support

The main feature of this milestone is support for Groovy 3.
To use Spock in your Groovy 3 project just select the `spock-\*-2.0-M2` artifact(s) ending with `-groovy-3.0`.

NOTE: As Groovy 3 is not backward compatible with Groovy 2, there is a layer of abstraction in Spock to allow to build (and use) the project with both Groovy 2 and 3.
      As a result, an extra artifact `spock-groovy2-compat` is (automatically) used in projects with Groovy 2.
      It is *very important* to *do not mix* the `spock-\*-2.x-groovy-2.5` artifacts with the `groovy-*-3.x` artifacts on a classpath.
      This may result in weird runtime errors.

=== Breaking Changes

==== Sputnik Runner removed
Although already in 2.0-M1 it wasn't explicitly mentioned: All enhancements that either extended `Sputnik`
or used it as a delegate runner will not work anymore, e.g, `PowerMockRunnerDelegate`.

=== Misc

- Add `@PendingFeatureIf` annotation (<<extensions.adoc#_pendingfeatureif,Docs>>)
- Fail-fast for invalid `Stub` interactions, added new validation that catches more invalid usage of `Stub`
- Forbid spying on `Spy` instances, as this doesn't work anyway and leads to wrong expectations (https://github.com/spockframework/spock/issues/1029[#1029])
- Update `Jvm` helper utility to include new Java versions, removed pre 8 versions
- Update docs regarding ByteBuddy, cglib, objenesis
- Provide compatibility to both JUnit 5.5.2 and 5.6.0

