@@ -21,11 +21,11 @@ ext {
   variants = [2.5, 3.0]
   variant = System.getProperty("variant") as BigDecimal ?: variants.first()
   if (variant == 2.5) {
-      groovyVersion = "2.5.8"
+      groovyVersion = "2.5.11"
       minGroovyVersion = "2.5.0"
       maxGroovyVersion = "2.9.99"
     } else if (variant == 3.0) {
-      groovyVersion = "3.0.2"
+      groovyVersion = "3.0.3"
       minGroovyVersion = "3.0.0"
       maxGroovyVersion = "3.9.99"
     } else {
